# django-web-react-interview

./: .gitignore  QUESTIONS.md  README.md  TASKS.md  taskfile.yml
.devcontainer/: .devcontainer.json  devcontainer.json
django/: pyproject.toml
django/category/: admin.py  models.py
django/category/migrations/: 0001_initial.py
django/order/: admin.py  forms.py  models.py  serializers.py  views.py
django/order/migrations/: 0001_initial.py
django/order/templates/: create_ajax_order.html  create_order.html  orders.html
django/product/: admin.py  models.py  views.py
django/product/migrations/: 0001_initial.py
django/product/templates/: products.html
django/store/: settings.py  urls.py
django/templates/: base.html
django/templates/snippets/: header.html
django/user/: admin.py  models.py  serializers.py  views.py
django/user/migrations/: 0001_initial.py
django/user/templates/: home.html  users.html
